# wechat-moments

./: .env  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  update-homebrew.yml
profiles/: huawei_default.json
scripts/: adb-screenshot.sh  deploy-mcp-remote.sh  mcp-remote.sh
src/wechat_moments/: __init__.py  adb.py  annotate.py  calibration.py  cli.py  collector.py  config.py  cv.py  history.py  images.py  ime.py  poster.py  preview.py  server.py  submit.py
tests/: test_publish_failure.py
tests/fsm/: test_flow.py  test_identify.py
tests/unit/: test_adb_transport_stability.py  test_calibration.py  test_preview.py  test_server.py  test_submit_flow.py
